--- a/app/src/main/res/layout/view_block_view_item.xml
+++ b/app/src/main/res/layout/view_block_view_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/activity_desc_bg"
               android:orientation="vertical">
 
     <TextView
@@ -11,7 +12,6 @@
         android:background="@drawable/acjn_grey_normal"
         android:checked="false"
         android:gravity="center"
-        android:maxLength="6"
         android:paddingLeft="12dip"
         android:paddingRight="12dip"
         android:textColor="@color/pub_color_fifteen"
