--- a/app/src/main/res/layout/acjn_activity_block_view.xml
+++ b/app/src/main/res/layout/acjn_activity_block_view.xml
@@ -26,11 +26,10 @@
         android:background="@color/act_myebuy_red"
         android:paddingBottom="15dip"
         android:paddingTop="15dip"
+        app:layoutGravity="center"
         app:autoMatchLayout="true"
         app:horizontalSpac="10dip"
         app:maxLine="2"
-        app:paddingLeft="15dip"
-        app:paddingRight="15dip"
         app:verticalSpac="10dip"/>
 
 </LinearLayout>
