--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,7 +12,10 @@
         <attr name="autoMatchLayout" format="boolean"/>
         <attr name="paddingLeft" format="dimension|reference"/>
         <attr name="paddingRight" format="dimension|reference"/>
-
+        <attr name="layoutGravity">
+            <enum name="center" value="0"/>
+            <enum name="twoSides" value="1"/>
+        </attr>
 
     </declare-styleable>
 
