--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,17 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="public_dimen_fourty_eight">48dip</dimen>
+
+    <dimen name="picture_pull_to_refresh_last_update_time_text_size">10dp</dimen>
+    <dimen name="picture_pull_to_refresh_last_update_time_top_margin">6dp</dimen>
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    <dimen name="header_footer_left_right_padding">24dp</dimen>
+    <dimen name="header_footer_top_bottom_padding">12dp</dimen>
+    <dimen name="category_wap_first_height">@dimen/pub_margin_or_padding_space_ninety</dimen>
+    <dimen name="pub_margin_or_padding_space_ninety">90dp</dimen>
+    <dimen name="android_public_space_24px">18dp</dimen>
+    <dimen name="android_public_space_10px">8dp</dimen>
+    <dimen name="android_public_text_size_22px">12sp</dimen>
 </resources>
