--- a/app/src/main/res/layout/acjn_activity_smart_tab_fragment.xml
+++ b/app/src/main/res/layout/acjn_activity_smart_tab_fragment.xml
@@ -8,5 +8,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_content"
         android:layout_width="match_parent"
+        android:background="@color/group_font_3"
         android:layout_height="match_parent"/>
 </LinearLayout>
