--- a/app/src/main/res/layout/acjn_view_recycler_item.xml
+++ b/app/src/main/res/layout/acjn_view_recycler_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/item_view_container"
               android:layout_width="match_parent"
               android:layout_height="50dip"
               android:orientation="vertical">
@@ -9,6 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="50dip"
         android:gravity="center"
+        android:layout_gravity="center"
+        android:text="sfsfsfsfs"
+        android:background="@color/white"
         android:textColor="@color/color_black_333333"
         android:textSize="18sp"/>
 </LinearLayout>
